# UniAR

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/rl_demo/: demo_mix.yaml  general.jsonl  geneval.jsonl  ocr.jsonl
docs/: evaluation.md  inference.md  reward_servers.md  training_rl.md
eval/convert_structure/: geneval.py  imgedit.py  longtext.py  oneig.py
eval/prompts/: geneval.jsonl  geneval_long.jsonl  imgedit.jsonl  longtext.jsonl  oneig.jsonl
inference/: __init__.py  chat.py  generate.py  generate_batch.py  visual_inputs.py
scripts/infer/: run_geneval.sh  run_imgedit.sh  run_longtext.sh  run_oneig.sh
scripts/train/: run_decode_node.sh  run_reward_node.sh  run_reward_server.sh  run_train_node.sh
train/rl/: dataset.py  reward_funcs.py  train_grpo.py
train/rl/reward_server/decode/: client.py  decoder.py  server.py
train/rl/reward_server/geneval/: evaluator.py  gunicorn.conf.py  server.py
train/rl/reward_server/hpsv2/: evaluator.py  gunicorn.conf.py  scorer.py  server.py
train/rl/reward_server/ocr/: evaluator.py  scorer.py  server.py
train/rl/reward_server/unified_reward/: client.py  vllm_server.sh
train/rl/trl/trl/: __init__.py
train/rl/trl/trl/trainer/: __init__.py  grpo_config.py  grpo_trainer_uniar.py  utils.py
uniar/: __init__.py  configuration_uniar.py  modeling_uniar.py  modeling_vision_decoder.py
uniar/vision_encoder/: __init__.py  bsq.py  configuration_vision_encoder.py  modeling_vision_encoder.py
