[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uniar"
version = "0.1.0"
description = "UniAR: Unified Autoregressive Visual Generation and Understanding"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.0",
    "transformers==4.57.0",
    "diffusers==0.37.1",
    "accelerate>=1.4.0",
    "einops",
    "safetensors",
    "qwen-vl-utils",
    "Pillow",
    "torchvision",
    "numpy",
    "tqdm",
    "requests>=2.31",
    "sentencepiece",
    "protobuf",
]

[project.optional-dependencies]
train = ["deepspeed>=0.16", "datasets>=3.0", "aiohttp>=3.9"]

[tool.setuptools.packages.find]
include = ["uniar*"]
